обновлен gitignore, изменена структура папок и штуки